completed user-can-view-frontend

--- a/server/public/index.html
+++ b/server/public/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link rel="stylesheet" href="styles.css">
   <title>Wicked Sales</title>
   <link rel="shortcut icon" type="image/png" href="/images/favicon.png">
   <link
@@ -18,7 +19,56 @@
   <link rel="stylesheet" href="/styles.css" />
 </head>
 <body>
-  <div id="root"></div>
+  <div id="root">
+    <!-- <div class="container-fluid">
+      <header>
+        <div class="header row d-flex align-items-center">
+          <div class="col-1"></div>
+          <h6 class="title col-10"><b>$ </b>Wicked Sales</h6>
+        </div>
+      </header>
+      <main class="row body-section">
+        <div class="col-1"></div>
+        <div class="cards-container col-10 d-flex justify-content-around flex-wrap">
+          <div class="card mt-4" style="width: 20rem; height: 33rem;">
+            <div class="row" style="height: 550px; width: auto; align-items: center; justify-content: center;">
+              <img src="images/snuggie.jpg" class="card-img-top" alt="..." style="width: 230px; object-fit: cover">
+            </div>
+            <div class="card-body">
+              <h4 class="card-title">Ostrich Pillow</h4>
+              <h6 class="price card-title">$29.99</h6>
+              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+            </div>
+          </div>    
+          <div class="card mt-4" style="width: 20rem; height: 33rem;">
+            <div class="row" style="height: 550px; width: auto; align-items: center; justify-content: center;">
+              <img src="images/ostrich-pillow.jpg" class="card-img-top" alt="..." style="width: 230px; object-fit: cover">
+            </div>
+            
+            <div class="card-body">
+              <h4 class="card-title">Ostrich Pillow</h4>
+              <h6 class="price card-title">$29.99</h6>
+              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+            </div>
+          </div>
+          <div class="card mt-4" style="width: 20rem; height: 33rem;">
+            <div class="row" style="height: 550px; width: auto; align-items: center; justify-content: center;">
+              <img src="images/tater-mitts.jpg" class="card-img-top" alt="..." style="width: 230px; object-fit: cover">
+            </div>
+            
+            <div class="card-body">
+              <h4 class="card-title">Ostrich Pillow</h4>
+              <h6 class="price card-title">$29.99</h6>
+              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+            </div>
+          </div>    
+        </div>
+        <div class="col-1"></div>
+      </main>
+    </div>
+     -->
+
+  </div>
   <script src="/main.js"></script>
 </body>
 </html>
