completed User Can View Details Page

--- a/server/public/index.html
+++ b/server/public/index.html
@@ -20,7 +20,8 @@
 </head>
 <body>
   <div id="root">
-    <!-- <div class="container-fluid">
+<!--     
+    <div class="container-fluid">
       <header>
         <div class="header row d-flex align-items-center">
           <div class="col-1"></div>
@@ -28,6 +29,28 @@
         </div>
       </header>
       <main class="row body-section">
+        <div class="col-2"></div>
+        <div class="details-container col-8">
+          <div class="title-header d-flex align-items-center">
+            <h2>Wicked Sales</h2>
+          </div>
+          <div class="product-details-container">
+            <div class="back-button">< Back to catalog</div>
+            <div class="pic-price">
+              <img class="image" src="images/shamwow.jpg" alt="...">
+              <div class="name-price-details">
+                <h3 class="name">Product Name</h3>
+                <div class="price">$10.00</div>
+                <div class="short-desc">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ut neque consequatur quod eveniet, voluptatem at quasi vero eligendi nisi facilis saepe? Dolores vero perferendis corrupti alias pariatur eveniet beatae. Nisi!</div>
+              </div>
+            </div>
+            <div class="long-desc">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quos, sint eum expedita facere tempora non sed corrupti iste incidunt, dolor praesentium autem molestiae voluptate cupiditate enim mollitia nesciunt. Illum, tempore! Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi eos unde ut possimus iure harum! Amet blanditiis quidem, impedit numquam alias commodi modi nam dolores placeat ab, voluptatum exercitationem sit? Lorem, ipsum dolor sit amet consectetur adipisicing elit. Repellat eos numquam fuga. Laborum aliquid labore obcaecati blanditiis excepturi omnis, nihil quam fugiat? Veniam, error accusantium laboriosam doloremque ipsam voluptatibus dignissimos!</div>
+          </div>
+        </div>
+        
+        <div class="col-2"></div>
+      </main> -->
+      <!-- <main class="row body-section">
         <div class="col-1"></div>
         <div class="cards-container col-10 d-flex justify-content-around flex-wrap">
           <div class="card mt-4" style="width: 20rem; height: 33rem;">
