completed view cart frontend

--- a/server/public/index.html
+++ b/server/public/index.html
@@ -20,7 +20,7 @@
 </head>
 <body>
   <div id="root">
-<!--     
+    
     <div class="container-fluid">
       <header>
         <div class="header row d-flex align-items-center">
@@ -49,7 +49,7 @@
         </div>
         
         <div class="col-2"></div>
-      </main> -->
+      </main>
       <!-- <main class="row body-section">
         <div class="col-1"></div>
         <div class="cards-container col-10 d-flex justify-content-around flex-wrap">
