updated meta tags

--- a/server/public/index.html
+++ b/server/public/index.html
@@ -1,6 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <meta name="title" property="og:title" content="Mario's Mart">
+        <meta property="og:type" content="React.js Shopping Cart App">
+        <meta name="image" property="og:image" content="./images/mariokart-1.jpg">
+        <meta name="description" property="og:description" content="A full stack Node.js and React shopping cart app. Created using React.js, Express, PostgreSQL, Node.js, Bootstrap 4 and HTML5 & CSS3.">
+        <meta name="author" content="Mil Amirian">
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
